# Emergencia1ProyectoEstru

./: CMakeLists.txt  chatcore.cpp  chatcore.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetpassworddialog.cpp  resetpassworddialog.h  resetpassworddialog.ui  resources.qrc  usersettingsdialog.cpp  usersettingsdialog.h  usersettingsdialog.ui
